--- a/index.html
+++ b/index.html
@@ -2,233 +2,206 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta http-equiv="Content-Security-Policy" content="frame-ancestors 'none';">
-
-<link rel="icon" type="image/png" href="favicon.png">
-<link rel="manifest" href="manifest.json">
-
 <title>Searchmas</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="theme-color" content="#1a73e8">
+
+<link rel="icon" href="favicon.png">
 
 <script async src="https://cse.google.com/cse.js?cx=949e339dabb3b4e60"></script>
 
 <style>
-html,body{margin:0;padding:0;height:100%;font-family:Arial,sans-serif;}
 body{
+  margin:0;
+  font-family:Arial, sans-serif;
   background:
-     url('Santa.png') left center / 50% 100vh no-repeat fixed,
-    url('Santa.png') right center / 50% 100vh no-repeat fixed;
+    url("Santa.png") left center / 50% 100vh no-repeat fixed,
+    url("Santa.png") right center / 50% 100vh no-repeat fixed,
+    #f2f2f2;
 }
 
-@media (max-width:768px){
-  body{background:url('Santa.png') center / cover no-repeat;}
-}
-
-#home{min-height:100vh;display:flex;flex-direction:column;justify-content:center;align-items:center;}
-
-.logo{
-  font-size:clamp(48px,10vw,80px);
-  font-weight:bold;
-  display:inline-flex;
-}
-.logo span:nth-child(1){color:#4285f4}
-.logo span:nth-child(2){color:#ff9800}
-.logo span:nth-child(3){color:#fbbc05}
-.logo span:nth-child(4){color:#4285f4}
-.logo span:nth-child(5){color:#34a853}
-.logo span:nth-child(6){color:#ff9800}
-.logo span:nth-child(7){color:#fbbc05}
-.logo span:nth-child(8){color:#4285f4}
-.logo span:nth-child(9){color:#34a853}
-
-.search-box{max-width:580px;width:90%;padding:0 16px;}
-input{width:100%;padding:14px 20px;font-size:18px;border-radius:24px;border:1px solid #dfe1e5;}
-
-#results{display:none;max-width:1400px;margin:auto;padding:15px;min-height:100vh;}
-.topbar{display:flex;gap:12px;align-items:center;}
-.back{cursor:pointer;font-size:22px;}
-
-.tabs{display:flex;gap:18px;margin:15px 0;border-bottom:1px solid #ddd;}
-.tab{cursor:pointer;color:#5f6368;padding-bottom:8px;}
-.tab.active{color:#1a73e8;border-bottom:3px solid #1a73e8;}
-
-.grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:12px;}
-.grid img{width:100%;aspect-ratio:16/9;object-fit:cover;border-radius:8px;}
-
-.news-col{display:flex;flex-direction:column;gap:16px;max-width:700px;}
-.news-card{
+/* Layout */
+.wrapper{
   display:flex;
+  flex-direction:column;
   align-items:center;
-  gap:14px;
-  padding:16px;
-  background:#fff;
-  border-radius:14px;
-  text-decoration:none;
-  color:#000;
-  box-shadow:0 2px 6px rgba(0,0,0,.08);
+  padding-top:60px;
 }
 
-/* Transparent PSE */
-.gsc-control-cse,
-.gsc-control-cse *{
-  background:transparent !important;
-  border:none !important;
-  box-shadow:none !important;
+/* Logo */
+.logo{
+  font-size:42px;
+  font-weight:bold;
+  color:#e53935;
+  margin-bottom:20px;
 }
-.gsc-above-wrapper-area,
-.gsc-tabsArea,
-.gsc-adBlock,
-.gcsc-find-more-on-google{
-  display:none !important;
+
+/* Search */
+.searchBar{
+  display:flex;
+  gap:10px;
+  width:95%;
+  max-width:900px;
+}
+
+.searchBar input{
+  flex:1;
+  padding:14px;
+  font-size:16px;
+  border-radius:999px;
+  border:1px solid #ddd;
+}
+
+.searchBar button{
+  padding:14px 22px;
+  border:none;
+  border-radius:999px;
+  background:#e53935;
+  color:white;
+  font-weight:bold;
+  cursor:pointer;
+}
+
+/* Tabs */
+.tabs{
+  margin-top:20px;
+  display:flex;
+  gap:10px;
+  flex-wrap:wrap;
+}
+
+.tabBtn{
+  padding:10px 18px;
+  border-radius:999px;
+  border:none;
+  background:#eee;
+  cursor:pointer;
+  font-weight:bold;
+}
+
+.tabBtn.active{
+  background:#e53935;
+  color:white;
+}
+
+/* Back button */
+.backBtn{
+  margin-top:20px;
+  background:#555;
+  color:white;
+  border:none;
+  border-radius:999px;
+  padding:10px 18px;
+  cursor:pointer;
+}
+
+/* RESULTS CARD — ONLY RESULTS */
+.resultsCard{
+  margin-top:25px;
+  background:white;
+  border-radius:20px;
+  box-shadow:0 8px 30px rgba(0,0,0,0.15);
+  padding:20px;
+  width:95%;
+  max-width:900px;
 }
 </style>
 </head>
 
 <body>
 
-<div id="home">
-  <div class="logo">
-    <span>S</span><span>e</span><span>a</span><span>r</span><span>c</span>
-    <span>h</span><span>m</span><span>a</span><span>s</span>
-  </div>
-  <form class="search-box" onsubmit="startSearch(event)">
-    <input id="qHome" placeholder="Search the web">
-  </form>
+<div class="wrapper">
+
+<div class="logo">Searchmas</div>
+
+<div class="searchBar">
+  <input id="searchInput" placeholder="Search Searchmas...">
+  <button onclick="search()">Search</button>
 </div>
 
-<div id="results">
-  <div class="topbar">
-    <div class="back" onclick="goHome()">⬅</div>
-    <input id="qTop">
-  </div>
+<div class="tabs">
+  <button class="tabBtn active" onclick="switchTab('all', this)">All</button>
+  <button class="tabBtn" onclick="switchTab('videos', this)">Videos</button>
+  <button class="tabBtn" onclick="switchTab('images', this)">Images</button>
+  <button class="tabBtn" onclick="switchTab('news', this)">News</button>
+</div>
 
-  <div class="tabs">
-    <div class="tab active" data-tab="all">All</div>
-    <div class="tab" data-tab="images">Images</div>
-    <div class="tab" data-tab="videos">Videos</div>
-    <div class="tab" data-tab="news">News</div>
-  </div>
+<button class="backBtn" onclick="goHome()">Back</button>
 
-  <div id="content"></div>
+<!-- RESULTS AREA -->
+<div id="resultsRoot"></div>
+
 </div>
 
 <script>
-const UNSPLASH="1IF0KThuYgH722kFgZ5TaZ1tyckTiMUri6DxUSeZ-fk";
-const YT="AIzaSyBKN7qNWVOSjIf040epQA579G29IzPxqpI";
+let currentQuery = "";
+let currentTab = "all";
 
-let tab="all";
-
-const homeEl=document.getElementById("home");
-const resEl=document.getElementById("results");
-const qHome=document.getElementById("qHome");
-const qTop=document.getElementById("qTop");
-const content=document.getElementById("content");
-
-const params=new URLSearchParams(location.search);
-const startQ=params.get("q");
-if(startQ) showResults(startQ);
-
-function startSearch(e){
-  e.preventDefault();
-  const q=qHome.value.trim();
+function search(){
+  const q = document.getElementById("searchInput").value.trim();
   if(!q) return;
-  history.pushState({}, "", "?q="+encodeURIComponent(q));
-  showResults(q);
-}
 
-function showResults(q){
-  homeEl.style.display="none";
-  resEl.style.display="block";
-  qTop.value=q;
-  search();
+  currentQuery = q;
+  loadTab(currentTab);
 }
 
 function goHome(){
-  history.replaceState({}, "", location.pathname);
-  resEl.style.display="none";
-  homeEl.style.display="flex";
+  document.getElementById("resultsRoot").innerHTML = "";
 }
 
-document.querySelectorAll(".tab").forEach(t=>{
-  t.onclick=()=>{
-    tab=t.dataset.tab;
-    document.querySelectorAll(".tab").forEach(x=>x.classList.remove("active"));
-    t.classList.add("active");
-    search();
-  };
-});
+function switchTab(tab, el){
+  document.querySelectorAll(".tabBtn").forEach(b=>b.classList.remove("active"));
+  el.classList.add("active");
 
-function runPSE(q){
-
-  // Wait for container + PSE ready
-  const wait=setInterval(()=>{
-
-    const container=document.querySelector(".gcse-searchresults-only");
-
-    if(container && window.google && google.search && google.search.cse){
-
-      try{
-        google.search.cse.element.getElement().execute(q);
-        clearInterval(wait);
-      }catch(e){}
-
-    }
-
-  },120);
-
+  currentTab = tab;
+  if(currentQuery) loadTab(tab);
 }
 
-function search(){
-  const q=qTop.value.trim();
-  if(!q) return;
-  const enc=encodeURIComponent(q);
+function loadTab(tab){
+  if(tab==="all") loadAll();
+  if(tab==="videos") loadVideos();
+  if(tab==="images") loadImages();
+  if(tab==="news") loadNews();
+}
 
-  if(tab==="all"){
-    content.innerHTML=`<div class="gcse-searchresults-only"></div>`;
+/* ALL — PSE INSIDE RESULTS CARD */
+function loadAll(){
+  const enc = encodeURIComponent(currentQuery);
 
-    // Optional hash for deep link (NOT main trigger)
-    location.hash="#gsc.tab=0&gsc.q="+enc+"&gsc.page=1";
+  document.getElementById("resultsRoot").innerHTML = `
+    <div class="resultsCard">
+      <div class="gcse-searchresults-only"></div>
+    </div>
+  `;
 
-    runPSE(q);
-    return;
-  }
+  location.hash = "#gsc.tab=0&gsc.q="+enc+"&gsc.page=1";
+}
 
-  if(tab==="images"){
-    fetch(`https://api.unsplash.com/search/photos?query=${enc}&per_page=18`,{
-      headers:{Authorization:"Client-ID "+UNSPLASH}
-    })
-    .then(r=>r.json())
-    .then(d=>{
-      content.innerHTML=`<div class="grid">${d.results.map(i=>`<img src="${i.urls.regular}">`).join("")}</div>`;
-    });
-  }
+/* OTHER TABS — ALSO RESULTS CARD */
+function loadVideos(){
+  document.getElementById("resultsRoot").innerHTML = `
+    <div class="resultsCard">
+      <h2>Videos for "${currentQuery}"</h2>
+      <p>Video results placeholder</p>
+    </div>
+  `;
+}
 
-  if(tab==="videos"){
-    fetch(`https://www.googleapis.com/youtube/v3/search?part=snippet&type=video&maxResults=12&q=${enc}&key=${YT}`)
-      .then(r=>r.json())
-      .then(d=>{
-        content.innerHTML=`<div class="grid">${d.items.map(v=>`
-          <a href="https://youtube.com/watch?v=${v.id.videoId}" target="_blank">
-            <img src="${v.snippet.thumbnails.high.url}">
-          </a>`).join("")}</div>`;
-      });
-  }
+function loadImages(){
+  document.getElementById("resultsRoot").innerHTML = `
+    <div class="resultsCard">
+      <h2>Images for "${currentQuery}"</h2>
+      <p>Image results placeholder</p>
+    </div>
+  `;
+}
 
-  if(tab==="news"){
-    content.innerHTML=`
-      <div class="news-col">
-        <a class="news-card" href="https://google.com/search?q=${enc}" target="_blank">
-          <img src="https://google.com/favicon.ico" width="32">
-          <div><div style="font-size:18px;font-weight:600;">Google News</div></div>
-        </a>
-
-        <a class="news-card" href="https://www.bing.com/news/search?q=${enc}" target="_blank">
-          <img src="https://bing.com/favicon.ico" width="32">
-          <div><div style="font-size:18px;font-weight:600;">Bing News</div></div>
-        </a>
-      </div>`;
-  }
+function loadNews(){
+  document.getElementById("resultsRoot").innerHTML = `
+    <div class="resultsCard">
+      <h2>News for "${currentQuery}"</h2>
+      <p>News results placeholder</p>
+    </div>
+  `;
 }
 </script>
 
