--- a/index.html
+++ b/index.html
@@ -2,234 +2,195 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta http-equiv="Content-Security-Policy" content="frame-ancestors 'none';">
-
-<link rel="icon" type="image/png" href="favicon.png">
-<link rel="manifest" href="manifest.json">
-
-<script>
-(function(){
-  if(window.document && window.document.documentMode){
-    window.location.replace("ie.html");
-  }
-})();
-</script>
-
 <title>Searchmas</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="theme-color" content="#1a73e8">
 
+<link rel="icon" href="favicon.png">
+
+<!-- Google PSE -->
 <script async src="https://cse.google.com/cse.js?cx=949e339dabb3b4e60"></script>
 
 <style>
-html,body{margin:0;padding:0;height:100%;font-family:Arial,sans-serif;}
 body{
+  margin:0;
+  font-family:Arial, sans-serif;
   background:
-     url('Santa.png') left center / 50% 100vh no-repeat fixed,
-    url('Santa.png') right center / 50% 100vh no-repeat fixed;
+    url("Santa.png") left center / 50% 100vh no-repeat fixed,
+    url("Santa.png") right center / 50% 100vh no-repeat fixed,
+    #f2f2f2;
 }
 
-@media (max-width: 768px) {
-  body {
-    background: url('Santa.png') center center / cover no-repeat;
-  }
+.wrapper{
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+  padding-top:60px;
 }
-
-#home{min-height:100vh;display:flex;flex-direction:column;justify-content:center;align-items:center;}
 
 .logo{
-  font-size:clamp(48px,10vw,80px);
+  font-size:42px;
   font-weight:bold;
-  display:inline-flex;
+  color:#e53935;
+  margin-bottom:20px;
 }
-.logo span:nth-child(1){color:#4285f4}
-.logo span:nth-child(2){color:#ff9800}
-.logo span:nth-child(3){color:#fbbc05}
-.logo span:nth-child(4){color:#4285f4}
-.logo span:nth-child(5){color:#34a853}
-.logo span:nth-child(6){color:#ff9800}
-.logo span:nth-child(7){color:#fbbc05}
-.logo span:nth-child(8){color:#4285f4}
-.logo span:nth-child(9){color:#34a853}
 
-.search-box{max-width:580px;width:90%;padding:0 16px;}
-input{width:100%;padding:14px 20px;font-size:18px;border-radius:24px;border:1px solid #dfe1e5;}
-
-#results{display:none;max-width:1400px;margin:auto;padding:15px;min-height:100vh;}
-.topbar{display:flex;gap:12px;align-items:center;}
-.back{cursor:pointer;font-size:22px;}
-
-.tabs{display:flex;gap:18px;margin:15px 0;border-bottom:1px solid #ddd;}
-.tab{cursor:pointer;color:#5f6368;padding-bottom:8px;}
-.tab.active{color:#1a73e8;border-bottom:3px solid #1a73e8;}
-
-.grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:12px;}
-.grid img{width:100%;aspect-ratio:16/9;object-fit:cover;border-radius:8px;}
-
-.news-col{display:flex;flex-direction:column;gap:16px;max-width:700px;}
-.news-card{
+.searchBar{
   display:flex;
-  align-items:center;
-  gap:14px;
-  padding:16px;
-  background:#fff;
-  border-radius:14px;
-  text-decoration:none;
-  color:#000;
-  box-shadow:0 2px 6px rgba(0,0,0,.08);
+  gap:10px;
+  width:95%;
+  max-width:900px;
 }
 
-.gsc-control-cse,
-.gsc-control-cse *{
-  background:transparent !important;
-  border:none !important;
-  box-shadow:none !important;
+.searchBar input{
+  flex:1;
+  padding:14px;
+  font-size:16px;
+  border-radius:999px;
+  border:1px solid #ddd;
 }
-.gsc-above-wrapper-area,
-.gsc-tabsArea,
-.gsc-adBlock,
-.gcsc-find-more-on-google{
-  display:none !important;
+
+.searchBar button{
+  padding:14px 22px;
+  border:none;
+  border-radius:999px;
+  background:#e53935;
+  color:white;
+  font-weight:bold;
+  cursor:pointer;
+}
+
+.tabs{
+  margin-top:20px;
+  display:flex;
+  gap:10px;
+  flex-wrap:wrap;
+}
+
+.tabBtn{
+  padding:10px 18px;
+  border-radius:999px;
+  border:none;
+  background:#eee;
+  cursor:pointer;
+  font-weight:bold;
+}
+
+.tabBtn.active{
+  background:#e53935;
+  color:white;
+}
+
+.backBtn{
+  margin-top:20px;
+  padding:10px 18px;
+  border:none;
+  border-radius:999px;
+  background:#444;
+  color:white;
+  cursor:pointer;
+}
+
+.resultsCard{
+  width:95%;
+  max-width:900px;
+  margin-top:20px;
+  background:white;
+  border-radius:20px;
+  padding:20px;
+  box-shadow:0 4px 20px rgba(0,0,0,0.1);
 }
 </style>
 </head>
 
 <body>
 
-<div id="home">
-  <div class="logo">
-    <span>S</span><span>e</span><span>a</span><span>r</span><span>c</span>
-    <span>h</span><span>m</span><span>a</span><span>s</span>
-  </div>
-  <form class="search-box" onsubmit="startSearch(event)">
-    <input id="qHome" placeholder="Search the web">
-  </form>
+<div class="wrapper">
+
+<div class="logo">Searchmas</div>
+
+<div class="searchBar">
+<input id="searchInput" placeholder="Search Searchmas">
+<button onclick="doSearch()">Search</button>
 </div>
 
-<div id="results">
-  <div class="topbar">
-    <div class="back" onclick="goHome()">⬅</div>
-    <input id="qTop">
-  </div>
+<div class="tabs">
+<button class="tabBtn active" onclick="switchTab('all',this)">All</button>
+<button class="tabBtn" onclick="switchTab('images',this)">Images</button>
+<button class="tabBtn" onclick="switchTab('videos',this)">Videos</button>
+<button class="tabBtn" onclick="switchTab('news',this)">News</button>
+</div>
 
-  <div class="tabs">
-    <div class="tab active" data-tab="all">All</div>
-    <div class="tab" data-tab="images">Images</div>
-    <div class="tab" data-tab="videos">Videos</div>
-    <div class="tab" data-tab="news">News</div>
-  </div>
+<button class="backBtn" onclick="goHome()">Back</button>
 
-  <div id="content"></div>
+<div id="resultsArea"></div>
+
 </div>
 
 <script>
-const UNSPLASH="1IF0KThuYgH722kFgZ5TaZ1tyckTiMUri6DxUSeZ-fk";
-const YT="AIzaSyBKN7qNWVOSjIf040epQA579G29IzPxqpI";
+let currentTab="all";
+let lastQuery="";
 
-let tab="all";
-const homeEl=document.getElementById("home");
-const resEl=document.getElementById("results");
-const qHome=document.getElementById("qHome");
-const qTop=document.getElementById("qTop");
-const content=document.getElementById("content");
+function switchTab(tab,btn){
+  currentTab=tab;
+  document.querySelectorAll(".tabBtn").forEach(b=>b.classList.remove("active"));
+  btn.classList.add("active");
 
-const params=new URLSearchParams(location.search);
-const startQ=params.get("q");
-if(startQ && startQ.trim()) showResults(startQ);
-
-function waitForPSE(callback){
-  if(window.__gcse){
-    callback();
-  }else{
-    setTimeout(()=>waitForPSE(callback),50);
-  }
-}
-
-function startSearch(e){
-  e.preventDefault();
-  const q=qHome.value.trim();
-  if(!q) return;
-  history.pushState({}, "", "?q="+encodeURIComponent(q));
-  showResults(q);
-}
-
-function showResults(q){
-  homeEl.style.display="none";
-  resEl.style.display="block";
-  qTop.value=q;
-  search();
+  if(lastQuery) renderResults(lastQuery);
 }
 
 function goHome(){
-  history.replaceState({}, "", location.pathname);
-  resEl.style.display="none";
-  homeEl.style.display="flex";
+  document.getElementById("resultsArea").innerHTML="";
 }
 
-document.querySelectorAll(".tab").forEach(t=>{
-  t.onclick=()=>{
-    tab=t.dataset.tab;
-    document.querySelectorAll(".tab").forEach(x=>x.classList.remove("active"));
-    t.classList.add("active");
-    search();
-  };
-});
-
-function search(){
-  const q=qTop.value.trim();
+function doSearch(){
+  const q=document.getElementById("searchInput").value.trim();
   if(!q) return;
-  const enc=encodeURIComponent(q);
+  lastQuery=q;
+  renderResults(q);
+}
 
-  if(tab==="all"){
-    content.innerHTML=`<div class="gcse-searchresults-only"></div>`;
+function callPSE(q){
+  if(window.google && google.search && google.search.cse){
+    google.search.cse.element.go(q);
+    return true;
+  }
+  return false;
+}
 
-    waitForPSE(()=>{
-      if(window.google && google.search && google.search.cse){
-        google.search.cse.element.go(q);
+function renderResults(q){
+  const area=document.getElementById("resultsArea");
+
+  if(currentTab==="all"){
+    area.innerHTML=`
+      <div class="resultsCard">
+        <div class="gcse-searchresults-only"></div>
+      </div>
+    `;
+
+    // Try after render
+    setTimeout(()=>{
+      if(!callPSE(q)){
+        // Retry once if script still loading
+        setTimeout(()=>callPSE(q),600);
       }
-    });
+    },300);
 
     return;
   }
 
-  if(tab==="images"){
-    fetch(`https://api.unsplash.com/search/photos?query=${enc}&per_page=18`,{
-      headers:{Authorization:"Client-ID "+UNSPLASH}
-    })
-    .then(r=>r.json())
-    .then(d=>{
-      content.innerHTML=`<div class="grid">${d.results.map(i=>`<img src="${i.urls.regular}">`).join("")}</div>`;
-    });
+  if(currentTab==="news"){
+    area.innerHTML=`<div class="resultsCard"><p>News results coming soon.</p></div>`;
+    return;
   }
 
-  if(tab==="videos"){
-    fetch(`https://www.googleapis.com/youtube/v3/search?part=snippet&type=video&maxResults=12&q=${enc}&key=${YT}`)
-      .then(r=>r.json())
-      .then(d=>{
-        content.innerHTML=`<div class="grid">${d.items.map(v=>`
-          <a href="https://youtube.com/watch?v=${v.id.videoId}" target="_blank">
-            <img src="${v.snippet.thumbnails.high.url}">
-          </a>`).join("")}</div>`;
-      });
+  if(currentTab==="images"){
+    window.open("https://www.google.com/search?tbm=isch&q="+encodeURIComponent(q));
+    return;
   }
 
-  if(tab==="news"){
-    content.innerHTML=`
-      <div class="news-col">
-        <a class="news-card" href="https://google.com/search?q=${enc}" target="_blank">
-          <img src="https://google.com/favicon.ico" width="32" height="32">
-          <div>
-            <div style="font-size:18px;font-weight:600;">Google News</div>
-          </div>
-        </a>
-        <a class="news-card" href="https://www.bing.com/news/search?q=${enc}" target="_blank">
-          <img src="https://bing.com/favicon.ico" width="32" height="32">
-          <div>
-            <div style="font-size:18px;font-weight:600;">Bing News</div>
-          </div>
-        </a>
-      </div>
-    `;
+  if(currentTab==="videos"){
+    window.open("https://www.google.com/search?tbm=vid&q="+encodeURIComponent(q));
+    return;
   }
 }
 </script>
