--- a/index.html
+++ b/index.html
@@ -183,18 +183,9 @@ function search(){
   const enc=encodeURIComponent(q);
 
   if(tab==="all"){
-    content.innerHTML=`<div id="pseWrapper"><div class="gcse-searchresults-only"></div></div>`;
-
-    // Auto-load PSE
-    const waitPSE = setInterval(()=>{
-      if(window.google && google.search && google.search.cse && google.search.cse.element){
-        clearInterval(waitPSE);
-        google.search.cse.element.go(q);
-      }
-    }, 50);
-
-    return;
-  }
+  content.innerHTML=`<div class="gcse-searchresults-only"></div>`;
+  return;
+}
 
   if(tab==="images"){
     fetch(`https://api.unsplash.com/search/photos?query=${enc}&per_page=18`,{
