--- a/index.html
+++ b/index.html
@@ -2,42 +2,37 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta http-equiv="Content-Security-Policy" content="frame-ancestors 'none';">
 
 <link rel="icon" type="image/png" href="favicon.png">
 <link rel="manifest" href="manifest.json">
 
 <script>
-(function(){
-  if(window.document && window.document.documentMode){
+  // IE detection using 'if (ie)' style
+  var ie = /*@cc_on!@*/false || !!document.documentMode;
+  if (ie){
     window.location.replace("ie.html");
   }
-})();
 </script>
 
 <title>Searchmas</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="theme-color" content="#1a73e8">
 
-<!-- Google PSE script -->
+<!-- Google PSE -->
 <script async src="https://cse.google.com/cse.js?cx=949e339dabb3b4e60"></script>
 
 <style>
-html,body{margin:0;padding:0;height:100%;font-family:Arial,sans-serif;}
+html, body {margin:0; padding:0; height:100%; font-family:Arial,sans-serif;}
 body{
   background:
      url('Santa.png') left center / 50% 100vh no-repeat fixed,
      url('Santa.png') right center / 50% 100vh no-repeat fixed;
 }
-
-@media (max-width: 768px) {
-  body {
-    background: url('Santa.png') center center / cover no-repeat;
-  }
+@media (max-width: 768px){
+  body { background: url('Santa.png') center center / cover no-repeat; }
 }
 
-#home{min-height:100vh;display:flex;flex-direction:column;justify-content:center;align-items:center;}
-
+#home{min-height:100vh; display:flex; flex-direction:column; justify-content:center; align-items:center;}
 .logo{
   font-size:clamp(48px,10vw,80px);
   font-weight:bold;
@@ -53,54 +48,39 @@ body{
 .logo span:nth-child(8){color:#4285f4}
 .logo span:nth-child(9){color:#34a853}
 
-.search-box{max-width:580px;width:90%;padding:0 16px;}
-input{width:100%;padding:14px 20px;font-size:18px;border-radius:24px;border:1px solid #dfe1e5;}
+.search-box{max-width:580px;width:90%; padding:0 16px;}
+input{width:100%; padding:14px 20px; font-size:18px; border-radius:24px; border:1px solid #dfe1e5;}
 
-#results{display:none;max-width:1400px;margin:auto;padding:15px;min-height:100vh;}
-.topbar{display:flex;gap:12px;align-items:center;}
-.back{cursor:pointer;font-size:22px;}
+#results{display:none; max-width:1400px; margin:auto; padding:15px; min-height:100vh;}
+.topbar{display:flex; gap:12px; align-items:center; margin-bottom:12px;}
+.back{cursor:pointer; font-size:22px;}
 
-.tabs{display:flex;gap:18px;margin:15px 0;border-bottom:1px solid #ddd;}
-.tab{cursor:pointer;color:#5f6368;padding-bottom:8px;}
-.tab.active{color:#1a73e8;border-bottom:3px solid #1a73e8;}
+.tabs{display:flex; gap:18px; margin:15px 0; border-bottom:1px solid #ddd;}
+.tab{cursor:pointer; color:#5f6368; padding-bottom:8px;}
+.tab.active{color:#1a73e8; border-bottom:3px solid #1a73e8;}
 
-.grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:12px;}
-.grid img{width:100%;aspect-ratio:16/9;object-fit:cover;border-radius:8px;}
+.grid{display:grid; grid-template-columns:repeat(auto-fit,minmax(280px,1fr)); gap:12px;}
+.grid img{width:100%; aspect-ratio:16/9; object-fit:cover; border-radius:8px;}
 
-.news-col{display:flex;flex-direction:column;gap:16px;max-width:700px;}
+.news-col{display:flex; flex-direction:column; gap:16px; max-width:700px;}
 .news-card{
-  display:flex;
-  align-items:center;
-  gap:14px;
-  padding:16px;
-  background:#fff;
-  border-radius:14px;
-  text-decoration:none;
-  color:#000;
+  display:flex; align-items:center; gap:14px; padding:16px;
+  background:#fff; border-radius:14px; text-decoration:none; color:#000;
   box-shadow:0 2px 6px rgba(0,0,0,.08);
 }
 
 /* PSE styling */
 .gsc-control-cse,
-.gsc-control-cse *{
-  background:transparent !important;
-  border:none !important;
-  box-shadow:none !important;
-}
+.gsc-control-cse * { background:transparent !important; border:none !important; box-shadow:none !important; }
 .gsc-above-wrapper-area,
 .gsc-tabsArea,
 .gsc-adBlock,
-.gcsc-find-more-on-google{
-  display:none !important;
-}
+.gcsc-find-more-on-google { display:none !important; }
 
-/* Individual PSE result cards */
-.pse-card{
-  background:white;
-  border-radius:16px;
-  padding:16px;
-  margin-bottom:12px;
-  box-shadow:0 3px 10px rgba(0,0,0,0.08);
+/* wrap PSE results in white card */
+#pseWrapper{
+  background:white; border-radius:20px; padding:20px;
+  box-shadow:0 4px 12px rgba(0,0,0,0.08);
 }
 </style>
 </head>
@@ -185,25 +165,12 @@ function search(){
 
   if(tab==="all"){
     content.innerHTML=`<div id="pseWrapper"><div class="gcse-searchresults-only"></div></div>`;
-
-    // Auto-load PSE
     const waitPSE = setInterval(()=>{
       if(window.google && google.search && google.search.cse && google.search.cse.element){
         clearInterval(waitPSE);
         google.search.cse.element.go(q);
-
-        // Wrap each result in its own white card
-        const observer = new MutationObserver(()=>{
-          document.querySelectorAll("#pseWrapper .gsc-webResult").forEach(el=>{
-            if(!el.classList.contains("pse-card")){
-              el.classList.add("pse-card");
-            }
-          });
-        });
-        observer.observe(document.querySelector("#pseWrapper"), {childList:true, subtree:true});
       }
     },50);
-
     return;
   }
 
@@ -229,18 +196,16 @@ function search(){
   }
 
   if(tab==="news"){
-    content.innerHTML=`
-      <div class="news-col">
-        <a class="news-card" href="https://google.com/search?q=${enc}" target="_blank">
-          <img src="https://google.com/favicon.ico" width="32" height="32">
-          <div><div style="font-size:18px;font-weight:600;">Google News</div></div>
-        </a>
-        <a class="news-card" href="https://www.bing.com/news/search?q=${enc}" target="_blank">
-          <img src="https://bing.com/favicon.ico" width="32" height="32">
-          <div><div style="font-size:18px;font-weight:600;">Bing News</div></div>
-        </a>
-      </div>
-    `;
+    content.innerHTML=`<div class="news-col">
+      <a class="news-card" href="https://news.google.com/search?q=${enc}" target="_blank">
+        <img src="https://google.com/favicon.ico" width="32" height="32">
+        <div><div style="font-size:18px;font-weight:600;">Google News</div></div>
+      </a>
+      <a class="news-card" href="https://www.bing.com/news/search?q=${enc}" target="_blank">
+        <img src="https://bing.com/favicon.ico" width="32" height="32">
+        <div><div style="font-size:18px;font-weight:600;">Bing News</div></div>
+      </a>
+    </div>`;
   }
 }
 </script>
