--- a/index.html
+++ b/index.html
@@ -161,7 +161,8 @@ function search(){
 // All tab (ID = 1)
 // All tab (ID = 1) - Updated for iOS Safari Compatibility
 if (buttonId === 1) {
-  content.innerHTML = `<div class="gcse-searchresults-only" data-mobileLayout="forced"></div>`;
+  <!-- Change 'forced' to 'enabled' or 'disabled' -->
+content.innerHTML = `<div class="gcse-searchresults-only" data-mobileLayout="enabled"></div>`
 
   // 1. Force the URL fragment using history.replaceState (more reliable on iOS)
   const newHash = `#gsc.tab=0&gsc.q=${enc}`;
